Modify conjugation width in big screens

--- a/templates/german-grammar-stark-verbs/german-stark-verbs.html
+++ b/templates/german-grammar-stark-verbs/german-stark-verbs.html
@@ -491,6 +491,13 @@
         .header {
           width: 450px;
         }
+
+        .conjugation {
+          margin: unset;
+          margin-left: unset;
+          margin-left: 20px;
+          width: 300px;
+        }
       }
     </style>
   </head>
